<resources>
    <string name="app_name">WatechPark</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="signedin">Stay signed in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Watech Park</string>
    <string name="menu_gallery">Order History</string>
    <string name="menu_slideshow">Add A Car</string>
    <string name="menu_tools">Manage Cars</string>
    <string name="menu_share">Settings</string>
    <string name="menu_send">Help</string>
    <string name="preparing_your_parking_lot">Preparing Your Parking Lot …</string>
    <string name="park_smart">park smart</string>
    <string name="copyright_u00a9_2019_watech_park_inc_all_rights_reserved">Copyright © 2020, Watech Park Inc. All rights reserved</string>
    <string name="submit">Submit</string>
    <string name="please_enter_your_account_email_address_or_phone_number_to_request_a_password_reset">Please enter your account email address or phone number to request a password reset.</string>
    <string name="e_mail">E-mail</string>
    <string name="phone">Phone #</string>
    <string name="please_check_your_entered_service_after_submitting_for_a_verification_code">Please check your entered service after submitting for a verification code</string>
    <string name="phone_num">Phone #</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail1">E-mail</string>
    <string name="create_account">Create Account</string>
    <string name="name1">Name</string>
    <string name="by_registering_you_accept_the_privacy_policy">By registering you accept the privacy policy</string>
    <string name="register_label">Register.</string>
    <string name="reg_user">Registering into Firebase…</string>
    <string name="fail_reg">Failed to register…</string>
    <string name="failed_reg">Failed to register…</string>
    <string name="full_req">Full name required!</string>
    <string name="phone_req">Phone number required!</string>
    <string name="email_req">Email is required!</string>
    <string name="user_req">Username is required!</string>
    <string name="psw_req">Password is required!</string>
    <string name="current_log">Currently logged in</string>
    <string name="please_login">Please log in</string>
    <string name="user_re1">Username is required!</string>
    <string name="pass_req1">Password is required</string>
    <string name="TRY_AGAIN">Try Again...</string>
    <string name="welcome_toast">Welcome!</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="e_mail_username">E-mail</string>
    <string name="request_token">474740183087-vgum9q27l7bgg3qjn9vd87krmktr02nt.apps.googleusercontent.com</string>
    <string name="current">Currently signed in.</string>
    <string name="forgot_2">Forgot Your Password?</string>
    <string name="value_id">Value</string>
    <string name="verification_code3">Verification Code</string>
    <string name="new_pswd">New Password</string>
    <string name="didn_not">Didn\'t get it?</string>
    <string name="resend">Resend</string>
    <string name="verify_pswd">Verify Your Password</string>
    <string name="phone_num1">Phone #:</string>
    <string name="default_web_client_id">474740183087-o6p5dvq442iodplkmire8ffg5fo4srhe.apps.googleusercontent.com</string>
    <string name="parking_pass">ParkingPassInfo</string>
    <string name="pay_ment">Payment</string>
    <string name="confirm_order">Do you want to confirm the order?</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="oid">OID:</string>
    <string name="cost">Cost</string>
    <string name="dollar">$</string>
    <string name="pass">Pass Type:</string>
    <string name="duration">Duration:</string>
    <string name="hours">hrs</string>
    <string name="valid">Valid from:</string>
    <string name="ixpire">Expiry:</string>
    <string name="bal">Balance:</string>
    <string name="dollar1">$</string>
    <string name="tax">Tax:</string>
    <string name="dollar2">$</string>
    <string name="bal_after">Balance After Purchase:</string>
    <string name="minudol">-$</string>
    <string name="dollar3">$</string>
    <string name="data_unavailable">Data is unavailable at this time…</string>
    <string name="orders">Orders</string>
    <string name="order_success">Order has been successfully placed! Please check Order History for further details.</string>
    <string name="order_failed">Transaction failed to complete successfully!</string>
    <string name="data_un">Data is unavailable at this time…</string>
    <string name="string">dd MMM yyyy hh:mm:ss a</string>
    <string name="make">Make is required!</string>
    <string name="model">Model is required!</string>
    <string name="color">Add a Color!</string>
    <string name="lic">License Plate # is required!</string>
    <string name="car_added">Car is added into your inventory…</string>
    <string name="car_failed">Failed to register car!</string>
    <string name="parkingpass_info">ParkingPassInfo</string>
    <string name="orders1">Orders</string>
    <string name="prof_img">Image/Profile Image</string>
    <string name="test_users">TestUsers</string>
    <string name="ph">Phone #:</string>
    <string name="em">E-mail:</string>
    <string name="us">Username:</string>
    <string name="prof_uun">Profile data is unavailable at this time…</string>
    <string name="format">dd MMM yyyy hh:mm:ss a</string>
    <string name="phone_requ">Phone # required</string>
    <string name="var">You are verified</string>
    <string name="code_sent">Code is sent to the number</string>
    <string name="vericode1">vericode</string>
    <string name="veri_emailsent">Verification email sent to</string>
    <string name="err">Error in sending email…</string>
    <string name="welcome_back">Welcome back</string>
    <string name="welcome1">Welcome back</string>
    <string name="ex">!</string>
    <string name="email_put">email</string>
    <string name="pass_put">password</string>
    <string name="box_put">checkbox</string>
    <string name="email_put1">email</string>
    <string name="email_put2">password</string>
    <string name="box_put2">checkbox</string>
    <string name="check_shared">checkbox</string>
    <string name="email_shared">email</string>
    <string name="pass_shared">password</string>
    <string name="new_wel">Welcome!</string>
    <string name="auth_fail">Authentication Failed…</string>
    <string name="wel2">Welcome!</string>
    <string name="final_static">parking_lot</string>
    <string name="queens_parkway">Queens Parkway</string>
    <string name="humber">Humber College</string>
    <string name="bloor">Bloor-Islington</string>
    <string name="eaton">CF Eaton Centre</string>
    <string name="york">Yorkdale Mall</string>
    <string name="scotia">Scotiabank Arena</string>
    <string name="mills">Vaughan Mills</string>
    <string name="yonge">Yonge-Sheppard</string>
    <string name="fairview">Fairview Mall</string>
    <string name="square">Square One SC</string>
    <string name="loc0">Queens, Toronto</string>
    <string name="loc1">Etobicoke,Ontario</string>
    <string name="loc2">Toronto, Ontario</string>
    <string name="loc3">Toronto, Ontario</string>
    <string name="loc4">Toronto, Ontario</string>
    <string name="loc5">Toronto,Ontario</string>
    <string name="loc6">Vaughan, Ontario</string>
    <string name="loc7">Sheppard, Toronto</string>
    <string name="loc8">Toronto, Ontario</string>
    <string name="loc9">Mississauga, Ontario</string>
    <string name="home_title">Home</string>
    <string name="confirm_out">Confirm Sign-Out</string>
    <string name="log_outconf">Are you sure you want to log-out from this account?</string>
    <string name="y">YES</string>
    <string name="n">NO</string>
    <string name="prof_2">Image/Profile Image</string>
    <string name="mo">Model:</string>
    <string name="del_carr">Delete Car From Inventory</string>
    <string name="make_set">Make:</string>
    <string name="yees">YES</string>
    <string name="data_parkingpass">ParkingPassInfo</string>
    <string name="qp">Queen\'s Parkway</string>
    <string name="hc">Humber College</string>
    <string name="bi">Bloor-Islington</string>
    <string name="ec">CF Eaton Centre</string>
    <string name="york2">Yorkdale Mall</string>
    <string name="scotia2">Scotiabank Arena</string>
    <string name="mills2">Vaughan Mills</string>
    <string name="yong2">Yonge-Sheppard</string>
    <string name="fair2">Faireview Mall</string>
    <string name="sq">Square One SC</string>
    <string name="lot_loc">Toronto,Ontario</string>
    <string name="lot_loc1">Etobicoke,Ontario</string>
    <string name="lot_loc2">Toronto,Ontario</string>
    <string name="lot_loc3">Toronto,Ontario</string>
    <string name="lot_loc4">Toronto,Ontario</string>
    <string name="lot_loc5">Toronto,Ontario</string>
    <string name="lot_loc6">Vaughan,Ontario</string>
    <string name="lot_loc7">Sheppard,Toronto</string>
    <string name="lot_loc8">Toronto,Ontario</string>
    <string name="lot_loc9">Toronto,Ontario</string>
    <string name="pass1">Daily</string>
    <string name="pass2">Hourly</string>
    <string name="pass3">Monthly</string>
    <string name="pass4">Daily</string>
    <string name="pass5">Hourly</string>
    <string name="pss6">Monthly</string>
    <string name="pass7">Daily</string>
    <string name="pass8">Hourly</string>
    <string name="pass9">Monthly</string>
    <string name="pass10">Daily</string>
    <string name="valid1">7AM - 12PM</string>
    <string name="valid2">8AM - 11PM</string>
    <string name="val3">6AM - 5PM</string>
    <string name="contact">Contact: 1800–854-6543</string>
    <string name="support">E-mail: support@watech.ca</string>
    <string name="pp">Privacy Policy</string>
    <string name="licensegnu">License: This app is licensed under the GNU Affero Public License v3.0(AGPLv3)</string>
    <string name="pay_time">Timestamp</string>
    <string name="pay_email">E-mail</string>
    <string name="pay_title">Payment Transaction Details</string>
    <string name="pay_bal">Balance Remaining</string>
    <string name="pay_tax">Taxes</string>
    <string name="pay_fee">Parking Fee</string>
    <string name="pay_exp">Expiry</string>
    <string name="pay_valid">Valid From</string>
    <string name="pay_tot">Total</string>
    <string name="pay_name">Lot Name</string>
    <string name="pay_id">Order ID</string>
    <string name="pay_dur">Duration</string>
    <string name="pay_loc">Location</string>
    <string name="enter_am">Enter amount</string>
    <string name="gnerate_code">Generate QR Code</string>
    <string name="pay_type">Pass Type</string>
    <string name="title_home">Home</string>
    <string name="title_pass">Parking Passes</string>
    <string name="title_history">Order History</string>
    <string name="title_add">Add A Car</string>
    <string name="title_manage">Manage Cars</string>
    <string name="title_pay">Payment</string>
    <string name="title_view">View</string>
    <string name="title_sett">Settings</string>
    <string name="title_help">Help</string>
    <string name="title_about">About</string>
</resources>