<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/nav_passes"
            android:icon="@drawable/ic_local_parking_black_24dp"
            android:title="@string/title_pass" />


        <item
            android:id="@+id/nav_orderhistory"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/title_history" />
        <item
            android:id="@+id/nav_addacar"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/title_add" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/title_manage" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/title_pay" />
    </group>

    <item android:title="@string/title_view">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_applications_black_24dp"
                android:title="@string/title_sett" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/title_help" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_view_compact_black_24dp"
                android:title="@string/title_about" />

        </menu>
    </item>

</menu>
