<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
    android:id="@+id/nav_home"
    android:name="com.example.watechpark.ui.Home.HomeFragment"
    android:label="@string/menu_home"
    tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_passes"
        android:name="com.example.watechpark.ParkingPassesFragment"
        android:label="Parking Passes"
        tools:layout="@layout/parking_passes_fragment" />
    <fragment
        android:id="@+id/nav_orderhistory"
        android:name="com.example.watechpark.ui.OrderHistoryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/order_history_fragment" />

    <fragment
        android:id="@+id/nav_addacar"
        android:name="com.example.watechpark.ui.AddACarFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/add_acar_fragment" />

    <fragment
        android:id="@+id/nav_manage"
        android:name="com.example.watechpark.ui.Settings.ManageCarsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/manage_cars_fragment" />
    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.watechpark.ui.Settings.PaymentFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/payment_fragment" />


    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.watechpark.ui.Settings.SettingsFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.watechpark.ui.Help.HelpFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.watechpark.ui.AboutFragment"
        android:label="About"
        tools:layout="@layout/about_fragment" />

</navigation>