<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    tools:context=".ui.Settings.PaymentFragment">


    <TextView
        android:id="@+id/time_stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="292dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_time"
        android:textColor="#f4f4f4"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_email"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView50"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="60dp"
        android:background="#aed581"
        android:backgroundTint="#aed581"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_title"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#f4f4f4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView58"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totalBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_bal"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_tax"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_balance"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_fee"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView62"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_exp"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView61"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_valid"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView60"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="204dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_tot"
        android:textColor="#f4f4f4"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/totalBalance"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_name"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView50"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView64"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:background="#90caf9"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_id"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView65"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_dur"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/totalAmount"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_loc"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView47"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_balance"
        android:layout_width="208dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:background="#424242"
        android:backgroundTint="#aed581"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:gravity="center"
        android:hint="@string/enter_am"
        android:inputType="textPersonName"
        android:textColor="#f4f4f4"
        app:layout_constraintBottom_toTopOf="@+id/button_generate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_generate"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:backgroundTint="#90caf9"
        android:fontFamily="@font/quicksand"
        android:gravity="center"
        android:text="@string/gnerate_code"
        android:textAllCaps="true"
        android:textColor="#f4f4f4"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="168dp"
        android:layout_height="124dp"
        android:layout_below="@id/edit_balance"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/totalBalance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pay_type"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView53"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="60dp"
        android:layout_height="57dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#AED581"
        android:clickable="true"
        android:src="@drawable/ic_arrow_forward_black_24dp"
        android:tint="#f4f4f4"
        app:backgroundTint="#AED581"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>