<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    tools:context=".ui.AboutFragment">


    <TextView
        android:id="@+id/textView71"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/quicksand"
        android:text="Version 1.0"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editText10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/contact"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView69"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView69"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/support"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView68"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="229dp"
        android:layout_height="253dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_transparent"
        app:layout_constraintBottom_toTopOf="@+id/textView71"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/pp"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="309dp"
        android:layout_height="69dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:enabled="false"
        android:fontFamily="@font/quicksand"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/licensegnu"
        android:textColor="#f4f4f4"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>